[package]
name = "imgix"
version = "0.1.1"
authors = ["eric <ericdeansanchez@berkeley.edu>"]
description = """
imgix-rs is a crate used for generating urls.
"""
documentation = "https://github.com/ericdeansanchez/imgix-rs"
homepage = "https://github.com/ericdeansanchez/imgix-rs"
repository = "https://github.com/ericdeansanchez/imgix-rs"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
clap = "2.33"

[lib]
name = "imgix"
path = "src/imgix/lib.rs"
